add production gems for Heroku

--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>Foobar Kadigan<% end %>
+<% content_for :title do %>Finding Meno | Tell us about your trip to Indonesia<% end %>
 <% content_for :description do %>Website of Foobar Kadigan<% end %>
 
 <section class="background_image">
