--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -4,7 +4,7 @@
 <section class="background_image">
   <div class="column">
     <h3>Finding Meno...</h3>
-    <p>Tell us what you enjoyed about your trips to Bali and Indonesia</p>
+    <p>Tell us what you enjoyed about your trips to Bali and Indonesia...</p>
   </div>
   <div class="column">
     <div class="form-centered">
