--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,9 @@
 <%# navigation styled for Zurb Foundation 5 %>
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name"><%= link_to 'Finding Meno', root_path %></li>
-    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
-  </ul>
-  <div class="top-bar-section float-right">
-    <ul>
+<div class="container">
+  <%= link_to 'Finding Meno', root_path, id: "logo" %>
+  <nav>
+    <ul class="nav navbar-nav navbar-right">
       <%= render 'layouts/navigation_links' %>
     </ul>
-  </div>
-</nav>
+  </nav>
+</div>
