--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,19 +1,15 @@
 <% content_for :title do %>Finding Meno | Tell us about your trip to Indonesia<% end %>
-<% content_for :description do %>Website of Foobar Kadigan<% end %>
+<% content_for :description do %>Tell us what you enjoyed about your trips to Bali and Indonesia.<% end %>
 
-<section class="background_image">
-  <div class="column">
+
     <h3>Finding Meno...</h3>
     <p>Tell us what you enjoyed about your trips to Bali and Indonesia.</p>
-  </div>
-  <div class="column">
-    <div class="form-centered">
+    <form>
       <%= simple_form_for @visitor do |f| %>
         <%= f.error_notification %>
-        <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
-        <br/>
-        <%= f.button :submit, "Sign up for the newsletter", :class => "submit" %>
+        <div class="form-group">
+          <%= f.input :email, label: false, :placeholder => 'Your email address...', :class => "form-control" %>
+        </div>
+        <%= f.button :submit, "Sign up for the newsletter", :class => "btn btn-default" %>
       <% end %>
-    </div>
-  </div>
-</section>
+    </form>
