--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,8 @@
 <%# Rails flash messages styled for Zurb Foundation %>
-<% flash.each do |name, msg| %>
-  <% if msg.is_a?(String) %>
-    <div data-alert class="alert-box round <%= name.to_s == 'notice' ? 'success' : 'alert' %>">
-      <%= content_tag :div, msg %>
-      <a href="#" class="close">&times;</a>
+<% flash.each do |message_type, message| %>
+  <% if message.is_a?(String) %>
+    <div class="alert alert-<%= message_type %>">
+      <%= message %>
     </div>
   <% end %>
 <% end %>
