--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,9 +1,10 @@
-<%# navigation styled for Zurb Foundation 5 %>
-<div class="container">
-  <%= link_to 'Finding Meno', root_path, id: "logo" %>
-  <nav>
-    <ul class="nav navbar-nav navbar-right">
-      <%= render 'layouts/navigation_links' %>
-    </ul>
-  </nav>
-</div>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to 'Finding Meno', root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <%= render 'layouts/navigation_links' %>
+      </ul>
+    </nav>
+  </div>
+</header>
