--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Finding Meno" %></title>
@@ -10,9 +10,8 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-  <header class="navbar navbar-fixed-top navbar-inverse">
-      <%= render 'layouts/navigation' %>
-  </header>
+
+    <%= render 'layouts/navigation' %>
 
   <div class="container">
     <%= render 'layouts/messages' %>
