--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -159,7 +159,7 @@
 
 						<!-- ABOUT-1 IMAGE -->
 						<div id="about-1-img" class="col-md-6 text-center">
-							<img class="img-responsive" src="img/thumbs/startup.png" alt="image" />
+              <%= image_tag("thumbs/startup.png", alt: 'Startup image', class: "img-responsive") %>
 						</div>	<!-- END ABOUT-1 IMAGE -->
 
 
@@ -213,7 +213,7 @@
 												<blockquote class="quote-text">
 												  <a href="#">@ Numquam eius modi tempora incidunt, labore dolore magnam aliquam quaerat voluptatem labore voluptatem.</a>
 												</blockquote>
-												<img class="quote-author-avatar" src="img/thumbs/user-1.jpg" alt="">
+                        <%= image_tag("thumbs/user-1.jpg", alt: 'User 1', class: "quote-author-avatar") %>
 												<p class="quote-author">
 												  <a href="#"><strong>John Doe</strong>@#johdoe</a>
 												</p>
@@ -226,9 +226,9 @@
 												<blockquote class="quote-text">
 												  <a href="#">@Nemo voluptatem, quia voluptas, aspernatur consequuntur magni dolores ratione voluptatem nesciunt.</a>
 												</blockquote>
-												<img class="quote-author-avatar" src="img/thumbs/user-2.jpg" alt="">
+												<%= image_tag("thumbs/user-2.jpg", alt: 'User 1', class: "quote-author-avatar") %>
 												<p class="quote-author">
-												  <a href="#"><strong>John Doe</strong>@#johdoe</a>
+												  <a href="#"><strong>Fred Smith</strong>@#fredsmith</a>
 												</p>
 											</div>
 										</li>
@@ -239,9 +239,9 @@
 												<blockquote class="quote-text">
 												  <a href="#">@Praesent semper, lacus sed cursus porta, odio augue feugiat tincidunt ligula massa in primis faucibus posuere cubilia.</a>
 												</blockquote>
-												<img class="quote-author-avatar" src="img/thumbs/user-3.jpg" alt="">
+												<%= image_tag("thumbs/user-3.jpg", alt: 'User 1', class: "quote-author-avatar") %>
 												<p class="quote-author">
-												  <a href="#"><strong>John Doe</strong>@#johdoe</a>
+												  <a href="#"><strong>Eileen Dover</strong>@#edover</a>
 												</p>
 											</div>
 										</li>
@@ -479,7 +479,7 @@
 								<div class="price-header">
 									<h4 class="plan-title">Standard Package</h4>
 									<div  class="plan-price">
-										<h2>$19.99</h2>
+										<h2>R19.99</h2>
 										<span>per month</span>
 									</div>
 								</div>
@@ -510,7 +510,7 @@
 								<div class="price-header">
 									<h4 class="plan-title">Advanced Package</h4>
 									<div  class="plan-price">
-										<h2>$29.99</h2>
+										<h2>R49.99</h2>
 										<span>per month</span>
 									</div>
 								</div>
@@ -541,7 +541,7 @@
 								<div class="price-header">
 									<h4 class="plan-title">Ultimate Package</h4>
 									<div  class="plan-price">
-										<h2>$99.99</h2>
+										<h2>R99.99</h2>
 										<span>per month</span>
 									</div>
 								</div>
@@ -594,7 +594,7 @@
 								<!-- Post Image -->
 								<div class="col-md-12 col-lg-6">
 									<div class="blog-post-img">
-										<img class="img-responsive" src="img/blog/img1.jpg" alt="Blog Image" />
+                    <%= image_tag("blog/img1.jpg", alt: 'Blog Image', class: "img-responsive") %>
 									</div>
 								</div>
 
@@ -629,7 +629,7 @@
 								<!-- Post Image -->
 								<div class="col-md-12 col-lg-6">
 									<div class="blog-post-img">
-										<img class="img-responsive" src="img/blog/img2.jpg" alt="Blog Image" />
+										<%= image_tag("blog/img2.jpg", alt: 'Blog Image', class: "img-responsive") %>
 									</div>
 								</div>
 
@@ -703,7 +703,7 @@
 								<!-- Post Image -->
 								<div class="col-md-12 col-lg-6">
 									<div class="blog-post-img">
-										<img class="img-responsive" src="img/blog/img3.jpg" alt="Blog Image" />
+										<%= image_tag("blog/img3.jpg", alt: 'Blog Image', class: "img-responsive") %>
 									</div>
 								</div>
 
@@ -779,42 +779,42 @@
 
 								<!-- Client Logo #1-->
 								<div id="client-logo-1" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-1.png" alt="customer_image">
+                  <%= image_tag("thumbs/client-1.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #2-->
 								<div id="client-logo-2" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-2.png" alt="customer_image">
+									<%= image_tag("thumbs/client-2.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #3-->
 								<div id="client-logo-3" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-3.png" alt="customer_image">
+									<%= image_tag("thumbs/client-3.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #4-->
 								<div id="client-logo-4" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-4.png" alt="customer_image">
+									<%= image_tag("thumbs/client-4.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #5-->
 								<div id="client-logo-5" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-5.png" alt="customer_image">
+									<%= image_tag("thumbs/client-5.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #6-->
 								<div id="client-logo-6" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-6.png" alt="customer_image">
+									<%= image_tag("thumbs/client-6.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #7-->
 								<div id="client-logo-7" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-1.png" alt="customer_image">
+									<%= image_tag("thumbs/client-7.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 								<!-- Client Logo #8-->
 								<div id="client-logo-8" class="item">
-									<img class="img-responsive img-customer" src="img/thumbs/client-2.png" alt="customer_image">
+									<%= image_tag("thumbs/client-8.png", alt: 'Customer Logo', class: "img-responsive img-customer") %>
 								</div>
 
 							</div>	<!-- End Clients Carousel-->
