--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,8 +1,13 @@
-<%# Rails flash messages styled for Zurb Foundation %>
+
+<div class="container">
 <% flash.each do |message_type, message| %>
   <% if message.is_a?(String) %>
-    <div class="alert alert-<%= message_type %>">
+    <div class="alert alert-<%= message_type %> alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
       <%= message %>
     </div>
   <% end %>
 <% end %>
+</div>
