--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -12,7 +12,8 @@
 						<div id="intro_description" class="col-sm-7 col-md-7">
 
 							<!-- Intro Section Title -->
-							<h1><strong>CrossWay</strong> is the Most <strong>Simple Way</strong> to launch your <strong>startup</strong></h1>
+							<h1><strong>Travelling</strong> the world is one of the best things you can do to <strong>expand
+								your mind</strong> and <strong>make new friends.</strong></h1>
 
 							<!-- Description #1 -->
 							<div class="intro_feature">
@@ -38,47 +39,43 @@
 								</p>
 							</div>
 
-							<!-- Intro Section Button -->
-							<div class="intro_button text-center">
-								<a class="btn btn-primary btn-lg" href="#">Download Now</a>
-							</div>
 
 						</div>	<!-- End Intro Section Description -->
 
 
 						<!-- Intro Section Form -->
-						<div id="intro_form" class="col-sm-5 col-md-5">
+						<div class="col-sm-5 col-md-5">
 
-							<!-- Register Form -->
-							<div class="form_register">
-								<h2> Register Now! </h2>
+							<!-- Send stories Form -->
+							<div class="simple_form">
+								<h2> Tell us your stories </h2>
 
-								<form action="contact.php" name="contactform" class="row" method="post">
+									<%= simple_form_for @visitor do |form| %>
+								    <%= form.error_notification %>
 
 									<div id="input_name" class="col-md-12">
-										<input id="name" class="form-control" type="text" name="first_name" placeholder="Full Name">
+										<%= form.input :name, label: false, :placeholder => 'Your name...', autofocus: true, :class => "form-control" %>
 									</div>
 
 									<div id="input_email" class="col-md-12">
-										<input id="email" class="form-control" type="text" name="email" placeholder="Enter your email">
-									</div>
-
-									<div id="input_phone" class="col-md-12">
-										<input id="phone" class="form-control" type="text" name="phone" placeholder="Phone Number">
+										<%= form.input :email, label: false, :placeholder => 'Your email address...', :class => "form-control" %>
 									</div>
 
 									<div id="input_message" class="col-md-12">
-										<textarea id="comments" class="form-control" name="message" rows="6" placeholder="Your Suggestion ..."></textarea>
+										<%= form.input :content, as: :text, label: false, :class => "form-control", :placeholder =>
+										"Tell us a little bit about your favourite travelling story - where, when, with who etc." %>
 									</div>
 
 									<!-- Submit Button -->
 									<div id="form_register_btn" class="text-center">
-										<input class="btn btn-primary btn-lg" type="submit" value="Register" id="submit">
+										<%= form.button :submit, 'Send story', class: 'btn btn-lg btn-primary' %>
 									</div>
 
-								</form>
+							  <% end %>
 
-							</div>	<!-- End Register Form -->
+
+
+							</div>	<!-- End Send stories Form -->
 						</div>	  <!-- End Intro Section Form -->
 
 
